--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "^3.0",
-        "monolog/monolog": "^1.19"
+        "monolog/monolog": "^1.19",
+        "slim/php-view": "^2.1"
     }
 }
