--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
         "slim/slim": "^3.0",
         "monolog/monolog": "^1.19",
         "slim/php-view": "^2.1"
+    },
+    "autoload": {
+    	"psr-4": {
+    		"App\\":"src"
+    	}
     }
 }
