--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.0",
         "monolog/monolog": "^1.19",
-        "slim/php-view": "^2.1"
+        "slim/php-view": "^2.1",
+        "catfan/Medoo": "^1.1"
     },
     "autoload": {
     	"psr-4": {
