--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "^3.0",
         "monolog/monolog": "^1.19",
         "slim/php-view": "^2.1",
-        "catfan/Medoo": "^1.1"
+        "catfan/Medoo": "^1.1",
+        "hiropeke/slim-blade-view": "^0.1.1"
     },
     "autoload": {
     	"psr-4": {
